# svm-vmm

./: CMakeLists.txt  SeCodeIntegrityQueryInformation.sln  SeCodeIntegrityQueryInformation.vcxproj  SeCodeIntegrityQueryInformation.vcxproj.filters  shadow_idt.c  СMakeSettings.json
asm/: shadow_idt.asm  vmrun.asm
hypervisor/: CMakeLists.txt  communication.c  communication.h  guest_mem.c  hooks.c  hooks.h  hypervisor.c  hypervisor.inf  hypervisor.vcxproj  hypervisor.vcxproj.filters  layers.c  layers.h  npt.c  npt.h  process_manager.h  stealth.h  svm.c  translator.h  vcpu.h
hypervisor/x64/Release/: hypervisor.recipe  hypervisor.sys.recipe  vmcb.h.ifc  vmcb.h.ifc.d.json  vmcb.h.module.json
hypervisor/x64/Release/hypervisor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  hypervisor.lastbuildstate
hypervisor/x64/Release/hypervisor_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
include/: guest_mem.h  hooks.h  layers.h  msr.h  npt.h  shadow_idt.h  smp.h  stealth.h  svm.h  vcpu.h  vmcb.h
src/communication/: communication.c
src/core/: driver.c  hypervisor.c  smp.c  svm.c  translator.c
src/hooks/: hooks.c
src/interrupts/: shadow_idt.c
src/memory/: guest_mem.c  layers.c  npt.c
src/process/: process_manager.c
src/stealth/: stealth.c
um/: README.md  hypercall.asm  hypercall.h  main.c  um.vcxproj  um.vcxproj.filters
x64/Release/: SeCodeIntegrityQueryInformation.cer  SeCodeIntegrityQueryInformation.sys.recipe  SeCodeIntegrityQueryInformation.vcxproj.FileListAbsolute.txt
x64/Release/SeCodeIn.9672A593.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Masm.read.1u.tlog  Masm.write.1u.tlog  SeCodeIntegrityQueryInformation.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  signtool.command.1.tlog  signtool.read.1.tlog  signtool.timestamp.1.tlog  signtool.write.1.tlog
x64/Release/SeCodeIntegrityQueryInformation/: SeCodeIntegrityQueryInformation.sys
